--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,9 +3,9 @@ server:
 
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5434/ecopulse_db
-    username: myuser
-    password: mypassword
+    url: jdbc:postgresql://localhost:5432/ecopulse
+    username: postgres
+    password: 12345
     driver-class-name: org.postgresql.Driver
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
@@ -14,3 +14,7 @@ spring:
     show-sql: true
   flyway:
     baseline-on-migrate: true
+spring-doc:
+  paths-to-match: /api/**/v1/**
+  swagger-ui:
+    use-root-path: true
